--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.3",
+    "@reown/appkit": "^1.6.2",
+    "@reown/appkit-adapter-wagmi": "^1.6.2",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-query": "^5.62.11",
+    "@wagmi/core": "^2.16.3",
     "@web3-react/core": "^8.2.3",
     "@web3-react/metamask": "^8.2.4",
     "@web3-react/types": "^8.2.3",
@@ -27,7 +31,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "viem": "^2.21.59",
+    "wagmi": "^2.14.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
